@@ -665,7 +665,7 @@ function key_time() {
 // max_age is the maximum seconds a key is allowed to be alive before being invalid.
 // The function is currently broken probably because the cookie is modified
 // in the wrong context and $this->key() does not match $form_key.
-function verify_key($form_key, $max_age = 900) {
+function verify_key($form_key, $max_age = 1200) {
 	$time = $this->key_time();
 	if (empty($time)) $time = time();
 	$key_check = (empty($this->key())) ? $form_key : $this->key();
