@@ -9,7 +9,7 @@
 	width: 590px;
 	text-align: left;
 /*	background: #BABCC1; */
-	background: #F0F8FF; /* aliceblue; */
+	background: #d1b494;
 	border: 1px solid #3A3C40;
 }
 
