@@ -92,6 +92,7 @@ Version 0.0.4b (in progress)
 * [Improved] For multiple instances of PSSS hosted on an individual domain, cookies are no longer shared.
 * [Replaced] Broken Smarty include on team page.
 * [Improved] Login/logout behaviour.
+* [Improved] When a session is expired a new session is generated.
 
 Version 0.0.3b (01/16/2023)
 * [Added] Team rosters to team page.
